[package]
name = "gas-lookup"
version = "0.1.4"
edition = "2021"
authors = ["doshivarun202@gmail.com"]
license = "MIT OR Apache-2.0"
description = "A tool to calculate total gas spent by an address within a given time frame"
readme = "README.md"
homepage = "https://github.com/varun-doshi/gas-lookup"
repository = "https://github.com/varun-doshi/gas-lookup"
keywords = ["cli", "gas", "ethereum","web3"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.15", features = ["full"] }
getrandom = { version = "0.2", features = ["js"] }
ethers={version  ="2.0.11",features = ["abigen","rustls","etherscan"], default-features = false}
chrono = "0.4.22"
colored = "2.0.4"
dotenv = "0.15.0"
